--- a/Dashboard/Areas/TeamEntity/Views/Player/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/CreateOrEdit.cshtml
@@ -132,6 +132,17 @@
                                                 <span asp-validation-for="Fk_PlayerPosition" class="text-danger"></span>
                                             </div>
                                         </div>
+                                        
+                                        <div class="col-md-12 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="IsActive" class="form-label"></label>
+                                                <select asp-for="IsActive" class="select2 form-select">
+                                                    <option value="true">@Localizer.Get("Yes")</option>
+                                                    <option value="false">@Localizer.Get("No")</option>
+                                                </select>
+                                                <span asp-validation-for="IsActive" class="text-danger"></span>
+                                            </div>
+                                        </div>
                                         @if (returnPage == (int)PlayerReturnPage.TeamProfile)
                                         {
                                             <input type="hidden" asp-for="Fk_Team">
