--- a/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Details.cshtml
+++ b/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Details.cshtml
@@ -28,10 +28,10 @@
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Cost):</dt>
                 <dd class="col-sm-8 mb-1">@Model.Cost</dd>
 
-                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Name):</dt>
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Discount):</dt>
                 <dd class="col-sm-8 mb-1">@Model.Discount</dd>
 
-                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Name):</dt>
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.CostAfterDiscount):</dt>
                 <dd class="col-sm-8 mb-1">@Model.CostAfterDiscount</dd>
             </dl>
         </div>
