--- a/Site/Views/Shared/_Layout.cshtml
+++ b/Site/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <div class="col-12 download-text text-center">
                         <div class="row button-group store-buttons">
                             <div id="apple" class="col p-2">
-                                <a href="https://play.google.com/store/apps/details?id=com.dinnova.fem">
+                                <a href="https://apps.apple.com/eg/app/id6444708450">
                                     <img src="~/download-assets/img/icon/app-store-black.png" alt="">
                                 </a>
                             </div>
@@ -48,7 +48,7 @@
                                 </a>
                             </div>
                             <div id="huawei" class="col p-2">
-                                <a href="https://play.google.com/store/apps/details?id=com.dinnova.fem">
+                                <a href="https://appgallery.huawei.com/app/C107418829">
                                     <img src="~/download-assets/img/icon/app-gallery-black.png" alt="">
                                 </a>
                             </div>
@@ -87,7 +87,7 @@
                 os = null;
 
             if (iosPlatforms.indexOf(platform) !== -1) {
-                window.location.href = "https://play.google.com/store/apps/details?id=com.dinnova.fem";
+                window.location.href = "https://apps.apple.com/eg/app/id6444708450";
             } else if (/Android/.test(userAgent)) {
                 $('#apple').hide();
             }
