--- a/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
@@ -133,7 +133,7 @@
                                             </div>
                                         </div>
                                        
-                                    <div class="col-md-12 col-12">
+                                        <div class="col-md-6 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Account.Fk_FavouriteTeam" class="form-label"></label>
                                                 <select asp-for="Account.Fk_FavouriteTeam" class="select2 form-select" asp-items="@(new SelectList(ViewData["Teams"] as Dictionary<string,string>,"Key","Value"))">
@@ -141,9 +141,33 @@
                                                 <span asp-validation-for="Account.Fk_FavouriteTeam" class="text-danger"></span>
                                             </div>
                                         </div>
-                                       
-                                    
-                                      
+                                        
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="Account.PhoneNumberTwo" class="form-label"></label>
+                                                <input asp-for="Account.PhoneNumberTwo" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("PhoneNumberTwo"))" />
+                                                <span asp-validation-for="Account.PhoneNumberTwo" class="text-danger"></span>
+                                            </div> 
+                                        </div>
+                                        
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="Account.RefCode" class="form-label"></label>
+                                                <input asp-for="Account.RefCode" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("RefCode"))" />
+                                                <span asp-validation-for="Account.RefCode" class="text-danger"></span>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="Account.RefCodeCount" class="form-label"></label>
+                                                <input asp-for="Account.RefCodeCount" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("RefCodeCount"))" />
+                                                <span asp-validation-for="Account.RefCodeCount" class="text-danger"></span>
+                                            </div>
+                                        </div>
+
+
+
                                         <div class="col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Account.Address" class="form-label"></label>
@@ -153,10 +177,10 @@
                                         </div>
 
                                     </div>
-                                    <div class="row">
-                                        <h3 class="mt-3">@Localizer.Get("Subscriptions")</h3>
-                                        <hr />
-                                        <div class="invoice-repeater">
+                                    @* <div class="row"> *@
+                                    @*     <h3 class="mt-3">@Localizer.Get("Subscriptions")</h3> *@
+                                    @*     <hr /> *@
+                                    @*     <div class="invoice-repeater"> *@
                                             @*<div data-repeater-list="Subscriptions" class="mb-2">
                                                 @if (Model.Subscriptions != null && Model.Subscriptions.Any())
                                                 {
@@ -262,20 +286,20 @@
                                             </div>*@
 
 
-                                            <div class="row mb-3">
-                                                <div class="col-12">
-                                                    <hr />
-
-                                                    <button id="add-new-btn-price" class="btn btn-icon btn-success" type="button" data-repeater-create>
-                                                        <i data-feather="plus" class="me-25"></i>
-                                                        <span>@Localizer.Get("Add Subscriptions")</span>
-                                                    </button>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                    <hr />
+                                    @*         <div class="row mb-3"> *@
+                                    @*             <div class="col-12"> *@
+                                    @*                 <hr /> *@
+                                    @* *@
+                                    @*                 <button id="add-new-btn-price" class="btn btn-icon btn-success" type="button" data-repeater-create> *@
+                                    @*                     <i data-feather="plus" class="me-25"></i> *@
+                                    @*                     <span>@Localizer.Get("Add Subscriptions")</span> *@
+                                    @*                 </button> *@
+                                    @*             </div> *@
+                                    @*         </div> *@
+                                    @* *@
+                                    @*     </div> *@
+                                    @* </div> *@
+                                    @* <hr /> *@
                                     <div class="row">
                                         <div class="col-12">
                                             <button type="submit" class="btn btn-primary me-1">@Localizer.Get("Submit")</button>
