--- a/Dashboard/Areas/AccountEntity/Views/Account/Details.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Details.cshtml
@@ -25,7 +25,8 @@
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.FavouriteTeam):</dt>
                     <dd class="col-sm-8 mb-1">@Model.FavouriteTeam.Name</dd>
 
-
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.RefCodeCount):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.RefCodeCount</dd>
                  
                 </dl>
             </div>
@@ -41,10 +42,15 @@
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.EmailAddress):</dt>
                     <dd class="col-sm-8 mb-1">@Model.EmailAddress</dd>
 
-                   
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.RefCode):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.RefCode</dd>
+                    
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.AccountRefCodeCount):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.AccountRefCodeCount</dd>
                 </dl>
             </div>
         </div>
+        <hr>
         <div class="row">
             <div class="col-xl-6 col-12">
                 <dl class="row mb-0">
