--- a/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
@@ -90,6 +90,7 @@
                                             <th>@Html.DisplayNameFor(model => row.Country)</th>
                                             <th>@Html.DisplayNameFor(model => row.PhoneNumber)</th>
                                             <th>@Html.DisplayNameFor(model => row.EmailAddress)</th>
+                                            <th>@Html.DisplayNameFor(model => row.AccountRefCodeCount)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
                                             <th class="no-sort">@Html.DisplayNameFor(model => row.LastActive)</th>
                                             <th>
@@ -174,6 +175,7 @@
 
                         { data: "phoneNumber" },
                         { data: "emailAddress" },
+                        { data: "accountRefCodeCount" },
                         { data: "createdAt" },
                         { data: "lastActive" },
                         { data: "id" },
